--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -19,6 +19,7 @@
                             <MudDatePicker @bind-Date="@dateSetter" Label="Date of Birth" Class="field-md" />
                             <MudCountrySelect @bind-Value="model.Country" Class="field-md" />
                             <MudTextField T="string" @bind-Value="model.Biography" Label="Biography" Lines="5" />
+                            <MudCheckBox @bind-Checked="model.Alive" Label="Is alive?" Color="Color.Secondary" />
                         </MudStack>
                     </MudPaper>
                 </MudItem>
