--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -42,6 +42,7 @@
                 </MudCardHeader>
                 <MudCardContent>
                     <MudText>Item is currently: @context.Item.State</MudText>
+                    <MudText>@(context.Item.Alive ? "Still alive" : "Died")</MudText>
                 </MudCardContent>
             </MudCard>
         </ChildRowContent>
