--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -33,7 +33,7 @@
                 <MudPaper Class="pa-2">
                     <MudText Typo="Typo.subtitle1">Options</MudText>
                     <MudText Typo="Typo.body2">
-                        Penalties are @(context.Item.Options.HasFlag(LeagueOptions.UsePenalty) ? "enabled" : "disabled")
+                        Penalties are @(context.Item.Options.HasFlag(LeagueOptions.EnablePenalty) ? "enabled" : "disabled")
                     </MudText>
                 </MudPaper>
 
