--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -445,6 +445,7 @@
         await PersistLapScores(allLapScores);
 
         // Todo: check if this doesnt mess with the lapscores if those are persisted per advance
+        // Also todo: implement disqualification as a postprocess moment
         await _raceService.FinishRace(finishedRace, finishedResults, scoredPoints, Model.LeagueOptions.HasFlag(LeagueOptions.EnableFatality));
 
         if (Model.LeagueOptions.HasFlag(LeagueOptions.EnablePenalty))
