--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: "F1Regular";
+    src: url("fonts/Formula1-Regular.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "F1Bold";
+    src: url("fonts/Formula1-Bold.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "F1Wide";
+    src: url("fonts/Formula1-Wide.otf") format("opentype");
+}
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
